<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/topLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/main_text"
        android:background="@color/colorPrimary"

        android:orientation="horizontal"></LinearLayout>

    <TextView
        android:id="@+id/eventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_toLeftOf="@+id/favCheckBox"
        android:layout_toStartOf="@+id/favCheckBox"
        android:layout_weight="1"
        android:elevation="2dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/textColor"
        android:typeface="serif"
        android:gravity="center"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="12dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <CheckBox
        android:id="@+id/favCheckBox"
        style="?android:attr/starStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:layout_alignRight="@+id/main_text"
        android:layout_alignTop="@+id/eventName"
        android:checked="false"
        android:elevation="2dp" />

    <LinearLayout
        android:id="@+id/upper_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventName"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:elevation="2dp"
        android:weightSum="100">

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_alignParentTop="false"
            android:layout_marginLeft="25dp"
            android:layout_weight="53.84"
            android:ellipsize="end"
            android:gravity="left"
            android:maxWidth="80dp"
            android:textColor="@color/textColor"
             />


        <TextView
            android:id="@+id/timeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="false"
            android:layout_marginRight="25dp"
            android:layout_toRightOf="@+id/location"
            android:layout_weight="50"
            android:gravity="right"
            android:minWidth="32dp"
            android:textColor="@color/textColor"
             />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lower_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upper_text"
        android:layout_marginBottom="6dp"
        android:elevation="2dp"
        android:paddingTop="3dp"
        android:weightSum="100">

        <TextView
            android:id="@+id/dateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_weight="50"
            android:ellipsize="end"
            android:gravity="left"
            android:textColor="@color/textColor"
             />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_toRightOf="@+id/dateTime"
            android:layout_weight="50"
            android:gravity="right"
            android:hyphenationFrequency="full"
            android:textColor="@color/textColor" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/main_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lower_text"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:maxHeight="210dp"
        android:minHeight="200dp"
        android:autoLink="web"
        >

        <com.apradanas.simplelinkabletext.LinkableTextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="left"
            android:maxEms="39"
            android:maxHeight="150dp"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:typeface="sans"
            android:autoLink="web" />
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/main_text"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="-32dp"
        android:layout_marginRight="20dp"
        android:clickable="true"
        android:src="@drawable/ic_directions_36" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/main_text"
        android:background="@color/borderColor"></LinearLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:id="@+id/mapDesc"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/main_text"
        android:layout_marginTop="1dp"
        android:layout_weight="2"
        android:elevation="1dp"
        android:minHeight="160dp"
        tools:context="com.innopolis.maps.innomaps.MapsActivity" />


</RelativeLayout>