...
    <string name="qrselect">Scan code</string>
    <string name="no_event">No Event Description</string>
    <string name="no_wc">There are no WC</string>
    <string name="no_food_poi">There are no food POI</string>
    <string name="no_other_poi">There are no other POI</string>
    <string name="no_events">There are no events</string>
    <string name="favourite">Favourite</string>
    <string name="maps">Maps</string>
    <string name="events">Events</string>
    <string name="about">About</string>
    <string name="logout">Log out</string>
    <string name="back_caps">BACK</string>
    <string name="go_caps">GO</string>
    <string name="marker_in_university">Please, select a room within the university</string>
    <string name="dialogSource">dialogSource</string>
...
