<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mapFragment"
    android:gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.00"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/mapWrapper"
        xmlns:android="http://schemas.android.com/apk/res/android" />

    <com.google.android.gms.maps.MapView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map" />

    <info.hoang8f.android.segmented.SegmentedGroup
        xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
        android:id="@+id/floorPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        segmentedgroup:sc_border_width="2dp"
        segmentedgroup:sc_corner_radius="0dp"
        segmentedgroup:sc_tint_color="#9e9e9e"
        segmentedgroup:sc_checked_text_color="#ffffff"
        android:background="#efebe9"
        android:animateLayoutChanges="true"
        android:layout_gravity="right"
        android:layout_marginBottom="74dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp">

        <RadioButton
            android:id="@+id/button5"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFAFAFA"
            android:text="5"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/button4"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="4"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/button3"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="3"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/button2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="2"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/button1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="1"
            style="@style/RadioButton" />
    </info.hoang8f.android.segmented.SegmentedGroup>
    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>