...
        android:layout_height="wrap_content"
        android:id="@+id/routeSpinners"
        android:gravity="center">
        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/floorSpinner">
        </android.support.v7.widget.AppCompatSpinner>
        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/roomSpinner"
            android:layout_toRightOf="@+id/floorSpinner"
            android:layout_alignBottom="@+id/floorSpinner"
            android:layout_alignTop="@+id/floorSpinner"
            android:layout_marginLeft="25dp">
        </android.support.v7.widget.AppCompatSpinner>
    </RelativeLayout>
...
