...

            </FrameLayout>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/goto_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:clickable="true"
...
